# seisai

./: .editconfig  .gitattributes  .gitignore  Dockerfile  LICENSE.txt  README.md  augment_freq.py  augment_space.py  augment_time.py  compat_test.py  config.py  conftest.py  gate_fblc.py  masked_segy_gather.py  pyproject.toml  pytest.ini  ruff.toml  segy_gather_pipeline_dataset.py  trace_masker.py  trace_subset_preproc.py
.devcontainer/: .env.example  compose-dev.yaml  requirements-dev.txt
.github/: CODEOWNERS
.issue_forge/: project.sh
cli/: _entrypoint.py  compare_fbpick_physics_runtime.py  convert_grstat_format.py  run_arakawa_fbpick_physical_export.py  run_blindtrace_infer.py  run_blindtrace_train.py  run_fbpick_coarse_eval.py  run_fbpick_coarse_infer.py  run_fbpick_coarse_train.py  run_fbpick_fine_infer.py  run_fbpick_fine_train.py  run_fbpick_global_qc.py  run_fbpick_physics.py  run_fbpick_physics_batch.py  run_fbpick_physics_qc.py  run_fbpick_physics_runtime_benchmark.py  run_pair_infer.py  run_pair_train.py  run_psn_infer.py  run_psn_train.py
docs/: fbpick_coarse_eval.md  fbpick_coarse_global_anchor.md  fbpick_fine_infer.md  fbpick_fine_train.md
examples/: config_eval_fbpick_coarse.yaml  config_fbpick_global_qc.yaml  config_infer_blindtrace.yaml  config_infer_fbpick_coarse.yaml  config_infer_fbpick_fine.yaml  config_infer_pair.yaml  config_infer_psn.yaml  config_run_fbpick_physics.yaml  config_run_fbpick_physics_physical_center.yaml  config_train_blindtrace.yaml  config_train_fbpick_coarse.yaml  config_train_fbpick_fine.yaml  config_train_pair.yaml  (+5 more)
(+676 files in other folders)
